# pork

./: AUTHORS  CONTRIBUTERS  Makefile.am  NEWS  QUICK_START  README  STYLE  TODO  autogen.sh  configure.ac  project.config  scrub.sh
doc/: Makefile.am  pork.1  porkrc
doc/help/: Makefile.am
doc/help/blist/: Makefile.am  collapse
doc/help/buddy/: Makefile.am
doc/help/chat/: Makefile.am
doc/help/event/: Makefile.am  add  del  del_refnum  list  purge
doc/help/file/: Makefile.am
doc/help/history/: Makefile.am
doc/help/input/: Makefile.am
doc/help/main/: Makefile.am  event  load  perl  perl_load  save  set
doc/help/perl/: Makefile.am  blist_down  blist_end  blist_hide  blist_page_down  blist_page_up  blist_refresh  blist_select  blist_show  blist_start  blist_up  blist_width  buddy_add  buddy_add_block  buddy_add_group  buddy_add_permit  buddy_alias  buddy_clear_block  buddy_clear_permit  buddy_remove  buddy_remove_block  buddy_remove_group  buddy_remove_permit  chat_ban  chat_ignore  chat_invite  chat_join  chat_kick  chat_leave  chat_send  chat_topic  chat_unignore  echo  err_msg  event_add  event_del  event_del_refnum  event_del_type  event_purge  get_acct_list  (+42 more)
doc/help/scroll/: Makefile.am
doc/help/timer/: Makefile.am
doc/help/win/: Makefile.am
examples/: blist.txt
examples/perl/: Makefile.am  acro.pl  calendar.pl  event_test.pl  irc.pl  np.pl  signon.pl  spellcheck.pl  wh.pl
src/: .cvsignore  Makefile.am  pork.c  pork.h  pork_acct.c  pork_acct.h  pork_alias.c  pork_alias.h  pork_bind.c  pork_bind.h  pork_buddy.c  pork_buddy.h  pork_buddy_list.c  pork_buddy_list.h  pork_chat.c  pork_chat.h  pork_color.c  pork_color.h  pork_command.c  pork_command.h  pork_command_defs.h  pork_cstr.c  pork_cstr.h  pork_events.c  pork_events.h  pork_format.c  pork_format.h  pork_format_global.c  pork_help.c  pork_help.h  pork_html.c  pork_html.h  pork_imsg.c  pork_imsg.h  pork_imwindow.c  pork_imwindow.h  pork_imwindow_set.c  pork_imwindow_set.h  pork_inet.c  pork_inet.h  (+40 more)
src/commands/: Makefile.am  pork_cmd_acct.c  pork_cmd_blist.c  pork_cmd_buddy.c  pork_cmd_chat.c  pork_cmd_event.c  pork_cmd_file.c  pork_cmd_history.c  pork_cmd_input.c  pork_cmd_main.c  pork_cmd_perl.c  pork_cmd_scroll.c  pork_cmd_timer.c  pork_cmd_win.c  pork_command.c
src/missing/: Makefile.am  getopt.c  getopt_missing.h  inet_ntop.c  ipv6_missing.c  pork_missing.h  vasprintf.c
src/perl/: Makefile.am  pork_perl.c  pork_perl.h  pork_perl_blist.c  pork_perl_buddy.c  pork_perl_chat.c  pork_perl_event.c  pork_perl_input.c  pork_perl_macro.h  pork_perl_stub.c  pork_perl_timer.c  pork_perl_transfer.c  pork_perl_win.c  pork_perl_xs.c  pork_perl_xs.h
src/prefs/: Makefile.am  pork_acct_set.c  pork_acct_set.h  pork_conf.c  pork_conf.h  pork_imwindow_set.c  pork_imwindow_set.h  pork_input_set.c  pork_input_set.h  pork_set.c  pork_set.h  pork_set_global.c  pork_set_global.h
src/protocols/: Makefile.am
src/protocols/aim/: Makefile.am  pork_aim.c  pork_aim.h  pork_aim_cmd.c  pork_aim_cmd.h  pork_aim_conf.c  pork_aim_conf.h  pork_aim_format.c  pork_aim_html.c  pork_aim_html.h  pork_aim_proto.c  pork_aim_proto.h  pork_aim_set.c  pork_aim_set.h
src/protocols/aim/libfaim/: CHANGES  Makefile.am  README  admin.c  aim.h  aim_cbtypes.h  aim_internal.h  auth.c  bart.c  bos.c  bstream.c  buddylist.c  chat.c  chatnav.c  conn.c  email.c  faimconfig.h  ft.c  icq.c  im.c  locate.c  md5.c  md5.h  misc.c  msgcookie.c  odir.c  popups.c  rxhandlers.c  rxqueue.c  search.c  service.c  snac.c  ssi.c  tlv.c  translate.c  txqueue.c  util.c
src/protocols/irc/: Makefile.am  pork_irc.c  pork_irc.h  pork_irc_cmd.c  pork_irc_cmd.h  pork_irc_dcc.c  pork_irc_dcc.h  pork_irc_format.c  pork_irc_format.h  pork_irc_input.c  pork_irc_output.c  pork_irc_set.c  pork_irc_set.h
src/xml/: Makefile.am  Makefile.in  pork_xml.cpp  pork_xml.h  xmlCSafe.h  xmlParser.cpp  xmlParser.h
