INCLUDES = -I. -I.. -I../.. -I../missing -I../prefs -I../perl
AM_CFLAGS = $(DEBUG_CFLAGS) $(PERL_CFLAGS) $(WARN_CFLAGS)

noinst_LIBRARIES = libporkcmd.a

libporkcmd_a_SOURCES =	\
	pork_cmd_acct.c		\
	pork_cmd_blist.c	\
	pork_cmd_buddy.c	\
	pork_cmd_chat.c		\
	pork_cmd_event.c	\
	pork_cmd_file.c		\
	pork_cmd_history.c	\
	pork_cmd_input.c	\
	pork_cmd_main.c		\
	pork_cmd_perl.c		\
	pork_cmd_scroll.c	\
	pork_cmd_timer.c	\
	pork_cmd_win.c		\
	pork_command.c
