blist_DATA = \
	add_block		\
	add_permit		\
	away			\
	collapse		\
	down			\
	end				\
	goto			\
	hide			\
	page_down		\
	page_up			\
	profile			\
	refresh			\
	remove			\
	remove_block	\
	remove_permit	\
	select			\
	show			\
	start			\
	toggle			\
	up				\
	warn			\
	warn_anon		\
	width

blistdir = $(pkgdatadir)/help/blist
