buddy_DATA = \
	add				\
	add_group		\
	alias			\
	awaymsg			\
	block			\
	clear_block		\
	clear_permit	\
	list			\
	list_block		\
	list_permit		\
	privacy_mode	\
	permit			\
	profile			\
	remove			\
	remove_group	\
	remove_permit	\
	report_idle		\
	search			\
	seen			\
	unblock			\
	warn			\
	warn_anon

buddydir = $(pkgdatadir)/help/buddy
