main_DATA = \
	acct		\
	alias		\
	auto		\
	away		\
	bind		\
	blist		\
	buddy		\
	chat		\
	color		\
	connect		\
	disconnect	\
	echo		\
	eval		\
	event		\
	file		\
	history		\
	idle		\
	input		\
	keys		\
	laddr		\
	lastlog		\
	load		\
	lport		\
	msg			\
	nick		\
	notice		\
	perl		\
	perl_load	\
	profile		\
	query		\
	quit		\
	quote		\
	refresh		\
	save		\
	scroll		\
	set			\
	timer		\
	unalias		\
	unbind		\
	who			\
	whowas		\
	win

maindir = $(pkgdatadir)/help/main
