perl_DATA = \
	alias					\
	alias_get				\
	bind					\
	bind_get				\
	blist_bind				\
	blist_bind_get			\
	blist_collapse			\
	blist_cursor			\
	blist_down				\
	blist_end				\
	blist_hide				\
	blist_page_down			\
	blist_page_up			\
	blist_refresh			\
	blist_select			\
	blist_show				\
	blist_start				\
	blist_unbind			\
	blist_up				\
	blist_width				\
	buddy_add				\
	buddy_add_block			\
	buddy_add_group			\
	buddy_add_permit		\
	buddy_alias				\
	buddy_clear_block		\
	buddy_clear_permit		\
	buddy_get_alias			\
	buddy_get_block			\
	buddy_get_group_members	\
	buddy_get_groups		\
	buddy_get_permit		\
	buddy_remove			\
	buddy_remove_block		\
	buddy_remove_group		\
	buddy_remove_permit		\
	chat_ban				\
	chat_get_list			\
	chat_get_users			\
	chat_get_window			\
	chat_ignore				\
	chat_invite				\
	chat_join				\
	chat_kick				\
	chat_leave				\
	chat_send				\
	chat_topic				\
	chat_unignore			\
	connect					\
	disconnect				\
	echo					\
	err_msg					\
	event_add				\
	event_del				\
	event_del_refnum		\
	event_del_type			\
	event_purge				\
	get_acct_list			\
	get_buddy_away			\
	get_buddy_profile		\
	get_cur_user			\
	get_opt					\
	get_profile				\
	load					\
	load_perl				\
	privacy_mode			\
	quit					\
	quote					\
	refresh					\
	report_idle				\
	run_cmd					\
	save					\
	scroll_by				\
	scroll_down				\
	scroll_end				\
	scroll_page_down		\
	scroll_page_up			\
	scroll_start			\
	scroll_up				\
	search					\
	send_msg				\
	send_msg_auto			\
	send_profile			\
	set_away				\
	set_idle				\
	set_opt					\
	set_profile				\
	status_msg				\
	timer_add				\
	timer_del				\
	timer_del_refnum		\
	timer_purge				\
	unalias					\
	unbind					\
	warn					\
	win_bind				\
	win_clear				\
	win_close				\
	win_erase				\
	win_find_name			\
	win_find_target			\
	win_get_opt				\
	win_next				\
	win_prev				\
	win_rename				\
	win_renumber			\
	win_set_opt				\
	win_swap

perldir = $(pkgdatadir)/help/perl
