INCLUDES = -I. -I.. -I../.. -I../../.. -I../../missing -Ilibfaim
AM_CFLAGS = $(DEBUG_CFLAGS) $(PERL_CFLAGS)

noinst_LIBRARIES = libaim.a

libaim_a_SOURCES = \
	libfaim/admin.c \
	libfaim/adverts.c \
	libfaim/auth.c \
	libfaim/bart.c \
	libfaim/bos.c \
	libfaim/bstream.c \
	libfaim/buddylist.c \
	libfaim/chat.c \
	libfaim/chatnav.c \
	libfaim/conn.c \
	libfaim/email.c \
	libfaim/ft.c \
	libfaim/icq.c \
	libfaim/im.c \
	libfaim/invite.c \
	libfaim/locate.c \
	libfaim/md5.c \
	libfaim/misc.c \
	libfaim/msgcookie.c \
	libfaim/odir.c \
	libfaim/popups.c \
	libfaim/rxhandlers.c \
	libfaim/rxqueue.c \
	libfaim/search.c \
	libfaim/service.c \
	libfaim/snac.c \
	libfaim/ssi.c \
	libfaim/stats.c \
	libfaim/tlv.c \
	libfaim/translate.c \
	libfaim/txqueue.c \
	libfaim/util.c \
	pork_aim.c \
	pork_aim_proto.c

noinst_HEADERS = \
	libfaim/aim.h \
	libfaim/aim_cbtypes.h \
	libfaim/aim_internal.h \
	libfaim/faimconfig.h \
	libfaim/md5.h \
	pork_aim.h \
	pork_aim_proto.h
