INCLUDES = -I. -I.. -I../.. -I../../.. -I../../../.. -I../../../missing -I../../../prefs
AM_CFLAGS = $(DEBUG_CFLAGS) $(PERL_CFLAGS) $(WARN_CFLAGS)

EXTRA_DIST = \
	AUTHORS \
	BUGS \
	CHANGES \
	COPYING \
	README

noinst_LIBRARIES = libfaim.a

libfaim_a_SOURCES = \
	admin.c \
	adverts.c \
	auth.c \
	bart.c \
	bos.c \
	bstream.c \
	buddylist.c \
	chat.c \
	chatnav.c \
	conn.c \
	email.c \
	ft.c \
	icq.c \
	im.c \
	invite.c \
	locate.c \
	md5.c \
	misc.c \
	msgcookie.c \
	odir.c \
	popups.c \
	rxhandlers.c \
	rxqueue.c \
	search.c \
	service.c \
	snac.c \
	ssi.c \
	stats.c \
	tlv.c \
	translate.c \
	txqueue.c \
	util.c

noinst_HEADERS = \
	aim.h \
	aim_cbtypes.h \
	aim_internal.h \
	md5.h
